--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -31,15 +31,13 @@
 }
 
 .main-nav{
-  position: absolute; 
-  top: 50%;
-  transform: translateY(-50%)
+  display: flex;
+  align-items: center;
+  margin-right: 15px;
 }
 
 .main-nav li{
-  display: inline;
-  margin-left: 7px;
-  padding-right: 10px;
+  padding: 15px;
   border-right: 1px solid #999b9e;
 }
 
@@ -47,18 +45,10 @@
   border-right: none;
 }
 
-.cart-link {
-  margin-right: 15px;
-  padding: 10px;
-}
 
 
 /*----- Category Navigation -----*/
 
-/* .category-nav{
-  height: 50px !important;
-  margin-bottom: 100px;
-} */
 
 .category-ul{
   margin: 0px !important;
@@ -113,22 +103,6 @@ h2{
   height: 500px;
 }
 
-/*
-.MuiButtonBase-root{
-  height: 350px !important;
-}
-.MuiCardMedia-root:hover{
-  cursor: auto;
-}
-
-.MuiButtonBase-root:hover{
-  cursor: auto;
-}
-
-.MuiCardActionArea-focusHighlight{
-  background-color: transparent !important;
-}
-*/
 .price-tag{
   float: right;
 } 
@@ -137,43 +111,14 @@ h2{
   height: 300px !important;
 } 
 
+.MuiCardActionArea-focusHighlight{
+  background-color: transparent !important;
+}
+
 
 
 /*----- Product Details Page -----*/
-/* .details-wrapper {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 20px 0 20px;
-}
 
-.details-purchase-wrapper{
-  margin: 0 auto;
-  max-width: 600px;
-  padding: 20px;
-  justify-items: center;
-}
-
-.details-purchase-wrapper h4{
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-
-.details-purchase-wrapper p{
-  text-align: center;
-  line-height: 1.7em;
-}
-
-
-
-.details-buy-btn {
-  width: 100%;
-  padding: 10px;
-  margin: 0 auto;
-}
-
-.MuiButton-disableElevation{
-  margin-bottom: 20px;
-} */
 
 .page-header{
   margin-top: 40px !important;
@@ -239,6 +184,13 @@ h2{
 
 .checkout-place-order-btn{
   width: 50%
+}
+
+
+@media screen and (min-width: 361px) and (max-width: 960px){
+  .main-nav > li:nth-child(-n+3){
+    display: none;
+  }
 }
 
 /* ----- Loading Animation ----- */
